@@ -89,6 +89,8 @@ C-API
 Library
 -------
 
+- Issue #1019882: Fix IndexError when loading certain hotshot stats.
+
 - Issue #8397: Raise an error when attempting to mix iteration and regular
   reads on a BZ2File object, rather than returning incorrect results.
 
